Implement how to work section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <img src="./src/assets/logo-large.png" alt="" />
         </div>
         <div class="burger-menu">
-            <div class="burger-menu__line"></div>
-            <div class="burger-menu__line"></div>
-            <div class="burger-menu__line"></div>
-          </div>
+          <div class="burger-menu__line"></div>
+          <div class="burger-menu__line"></div>
+          <div class="burger-menu__line"></div>
+        </div>
         <nav class="nav">
           <aside class="sidebar"></aside>
           <ul class="nav-list nav-list_white-text">
@@ -46,6 +46,115 @@
           <img src="./src/assets/intro-bcg-right.png" alt="" class="header-bcg__image" />
         </div>
       </header>
+      <section class="discover-section">
+        <div class="discover-section__dancing-girl-container">
+          <img src="./src/assets/dancing-girl-big.png" alt="dancing girl image" />
+        </div>
+        <div class="discover-section__content-container">
+          <h1 class="section-heading discover-section__title">DISCOVER BEST NFT MARKETPLACE</h1>
+          <p class="paragraph discover-section__description">
+            Non-fungible tokens, or NFTs, are artworks created on the blockchain with unique
+            encryption codes that can be validated for ownership.
+          </p>
+          <div class="discover-section__buttons-container">
+            <button class="button button_primary discover-section__button">
+              explore
+              <div class="button__icon-container">
+                <img src="./src/assets/search.svg" alt="seacrh icon" />
+              </div>
+            </button>
+            <button class="button button_primary discover-section__button">
+              create
+              <div class="button__icon-container">
+                <img src="./src/assets/search.svg" alt="seacrh icon" />
+              </div>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="how-to-work-section">
+        <div class="how-to-work-section__dancing-girl-container">
+          <img src="./src/assets/dancing-girl-big.png" alt="dancing girl image" />
+        </div>
+        <div class="how-to-work-section__content-container">
+          <h2 class="section-heading how-to-work-section__title">HOW TO WORK SHARMEN ?</h1>
+          <p class="paragraph how-to-work-section__description">
+            Non-fungible tokens, or NFTs, are artworks created on the blockchain with unique
+            encryption codes that can be validated for ownership.
+          </p>
+          <p class="paragraph how-to-work-section__description">
+            Non-fungible tokens, or NFTs, are artworks created on the blockchain with unique
+            encryption codes that can be validated for ownership.
+          </p>
+          <p class="paragraph how-to-work-section__description">
+            Non-fungible tokens, or NFTs, are artworks created on the blockchain with unique
+            encryption codes that can be validated for ownership.
+          </p>
+          <div class="how-to-work-section__buttons-container">
+            <button class="button button_primary how-to-work-section__button">
+              explore
+              <div class="button__icon-container">
+                <img src="./src/assets/search.svg" alt="seacrh icon" />
+              </div>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="our-collection-section">
+        <h2 class="section-heading our-collection-section__title">OUR COLLECTION</h2>
+        <div class="our-collection-images-container">
+            <div class="our-collection-images-container__row">
+                <div class="our-collection-item_large">
+                    <div class="our-collection-item__container_large">
+                        <img src="./src/assets/collection-nft-one.png" alt="">
+                    </div>
+                </div>
+                <div class="our-collection-item_small">
+                    <div class="our-collection-item__container_small">
+                        <img src="./src/assets/collection-nft-two.png" alt="">
+                    </div>
+                </div>
+                <div class="our-collection-item_large">
+                    <div class="our-collection-item__container_large">
+                        <img src="./src/assets/collection-nft-three.png" alt="">
+                    </div>
+                </div>
+                <div class="our-collection-item_small">
+                    <div class="our-collection-item__container_small">
+                        <img src="./src/assets/collection-nft-four.png" alt="">
+                    </div>
+                </div>               
+            </div>
+            <div class="our-collection-images-container__row">
+                <div class="our-collection-item_large">
+                    <div class="our-collection-item__container_large">
+                        <img src="./src/assets/collection-nft-three.png" alt="">
+                    </div>
+                </div>
+                <div class="our-collection-item_small">
+                    <div class="our-collection-item__container_small">
+                        <img src="./src/assets/collection-nft-four.png" alt="">
+                    </div>
+                </div>
+                <div class="our-collection-item_large">
+                    <div class="our-collection-item__container_large">
+                        <img src="./src/assets/collection-nft-one.png" alt="">
+                    </div>
+                </div>
+                <div class="our-collection-item_small">
+                    <div class="our-collection-item__container_small">
+                        <img src="./src/assets/collection-nft-two.png" alt="">
+                    </div>
+                </div>  
+            </div>
+        </div>
+        <p class="paragraph our-collection-section__description">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+        <div class="our-collection-section__button-container">
+            <button class="button button_primary our-collection-section__button">
+              view all
+            </button>
+          </div>
+      </section>
     </div>
     <script type="module" src="./src/main.js"></script>
   </body>
