--- a/index.html
+++ b/index.html
@@ -7,72 +7,72 @@
     <title>Sharmen</title>
   </head>
   <body>
-    <div class="container">
-      <header class="header">
-        <div class="header__logo">
-          <img src="./src/assets/logo-large.png" alt="" />
+    <header class="header">
+      <div class="header__logo">
+        <img src="./src/assets/logo-large.png" alt="" />
+      </div>
+      <div class="burger-menu">
+        <div class="burger-menu__line"></div>
+        <div class="burger-menu__line"></div>
+        <div class="burger-menu__line"></div>
+      </div>
+      <nav class="nav">
+        <aside class="sidebar"></aside>
+        <ul class="nav-list nav-list_white-text">
+          <li class="nav-list__item"><a href="" class="nav-list__link">roadmap</a></li>
+          <li class="nav-list__item"><a href="" class="nav-list__link">about us</a></li>
+          <li class="nav-list__item"><a href="" class="nav-list__link">whitepaper</a></li>
+        </ul>
+        <div class="nav__logo-container">
+          <img src="./src/assets/logo-small.png" alt="" class="nav__logo" />
         </div>
-        <div class="burger-menu">
-          <div class="burger-menu__line"></div>
-          <div class="burger-menu__line"></div>
-          <div class="burger-menu__line"></div>
+        <ul class="nav-list nav-list_black-text">
+          <li class="nav-list__item"><a href="" class="nav-list__link">blogs</a></li>
+          <li class="nav-list__item"><a href="" class="nav-list__link">collections</a></li>
+          <li class="nav-list__item"><a href="" class="nav-list__link">contact</a></li>
+        </ul>
+      </nav>
+      <div class="header__dancing-girl-image">
+        <img src="./src/assets/dancing-girl.png" alt="" />
+      </div>
+      <div class="header__girl-with-wolf-leg-image">
+        <img src="./src/assets/girl-with-wolf-leg.png" alt="" />
+      </div>
+      <div class="header-bcg">
+        <div class="header-bcg__overlay_left"></div>
+        <div class="header-bcg__overlay_right"></div>
+        <img src="./src/assets/intro-bcg-left.png" alt="" class="header-bcg__image" />
+        <img src="./src/assets/intro-bcg-right.png" alt="" class="header-bcg__image" />
+      </div>
+    </header>
+
+    <section class="section-container_lerge discover-section">
+      <div class="discover-section__dancing-girl-container">
+        <img src="./src/assets/dancing-girl-big.png" alt="dancing girl image" />
+      </div>
+          <div class="discover-section__content-container">
+            <h1 class="section-heading discover-section__title">DISCOVER BEST NFT MARKETPLACE</h1>
+            <p class="paragraph discover-section__description">
+              Non-fungible tokens, or NFTs, are artworks created on the blockchain with unique
+              encryption codes that can be validated for ownership.
+            </p>
+            <div class="discover-section__buttons-container">
+              <button class="button button_primary discover-section__button">
+                explore
+                <div class="button__icon-container">
+                  <img src="./src/assets/search.svg" alt="seacrh icon" />
+                </div>
+              </button>
+              <button class="button button_primary discover-section__button">
+                create
+                <div class="button__icon-container">
+                  <img src="./src/assets/search.svg" alt="seacrh icon" />
+                </div>
+              </button>
         </div>
-        <nav class="nav">
-          <aside class="sidebar"></aside>
-          <ul class="nav-list nav-list_white-text">
-            <li class="nav-list__item"><a href="" class="nav-list__link">roadmap</a></li>
-            <li class="nav-list__item"><a href="" class="nav-list__link">about us</a></li>
-            <li class="nav-list__item"><a href="" class="nav-list__link">whitepaper</a></li>
-          </ul>
-          <div class="nav__logo-container">
-            <img src="./src/assets/logo-small.png" alt="" class="nav__logo" />
-          </div>
-          <ul class="nav-list nav-list_black-text">
-            <li class="nav-list__item"><a href="" class="nav-list__link">blogs</a></li>
-            <li class="nav-list__item"><a href="" class="nav-list__link">collections</a></li>
-            <li class="nav-list__item"><a href="" class="nav-list__link">contact</a></li>
-          </ul>
-        </nav>
-        <div class="header__dancing-girl-image">
-          <img src="./src/assets/dancing-girl.png" alt="" />
-        </div>
-        <div class="header__girl-with-wolf-leg-image">
-          <img src="./src/assets/girl-with-wolf-leg.png" alt="" />
-        </div>
-        <div class="header-bcg">
-          <div class="header-bcg__overlay_left"></div>
-          <div class="header-bcg__overlay_right"></div>
-          <img src="./src/assets/intro-bcg-left.png" alt="" class="header-bcg__image" />
-          <img src="./src/assets/intro-bcg-right.png" alt="" class="header-bcg__image" />
-        </div>
-      </header>
-      <section class="discover-section">
-        <div class="discover-section__dancing-girl-container">
-          <img src="./src/assets/dancing-girl-big.png" alt="dancing girl image" />
-        </div>
-        <div class="discover-section__content-container">
-          <h1 class="section-heading discover-section__title">DISCOVER BEST NFT MARKETPLACE</h1>
-          <p class="paragraph discover-section__description">
-            Non-fungible tokens, or NFTs, are artworks created on the blockchain with unique
-            encryption codes that can be validated for ownership.
-          </p>
-          <div class="discover-section__buttons-container">
-            <button class="button button_primary discover-section__button">
-              explore
-              <div class="button__icon-container">
-                <img src="./src/assets/search.svg" alt="seacrh icon" />
-              </div>
-            </button>
-            <button class="button button_primary discover-section__button">
-              create
-              <div class="button__icon-container">
-                <img src="./src/assets/search.svg" alt="seacrh icon" />
-              </div>
-            </button>
-          </div>
-        </div>
-      </section>
-      <section class="how-to-work-section">
+      </div>
+    </section>
+     <section class="section-container_large how-to-work-section">
         <div class="how-to-work-section__dancing-girl-container">
           <img src="./src/assets/dancing-girl-big.png" alt="dancing girl image" />
         </div>
@@ -155,7 +155,43 @@
             </button>
           </div>
       </section>
-    </div>
+      <section class="roadmap-section">
+        <h2 class="section-heading roadmap-section__title">ROADMAP</h2>
+        <div class="roadmap-section__map-container">
+            <img src="./src/assets/map.png" alt="roadmap">
+        </div>
+      </section>
+      <section class="section-container_small contact-us-section">
+        <h2 class="section-heading contact-us-section__title">CONTACT US</h2>
+        <div class="contact-us-section__form-container">
+            <form class="contact-us-section-form" action="">
+                <div class="contact-us-section-form__inputs-container">
+                    <input class="contact-us-section-form__input" type="text" name=""  placeholder="Your Name">
+                    <input class="contact-us-section-form__input" type="text" name=""  placeholder="Your Email">
+                </div>
+                <div class="contact-us-section-form__textarea-container">
+                    <textarea class="contact-us-section-form__textarea" name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                </div>
+                <div class="contact-us-section-form__button-container">
+                    <button class="button button_primary contact-us-section-form__button">
+                        send message
+                      </button>
+                </div>
+            </form>
+        </div>
+      </section>
+      <footer class="section-container_small footer">
+        <div class="footer__container">
+            <div class="footer__col">
+                <span class="footer__text">Copyright 2022</span>
+            </div>
+            <div class="footer__col">
+                <a class="footer__link">Privacy & Policy</a>
+                <a class="footer__link">Cookies</a>
+                <a class="footer__link">Term Conditions</a>
+            </div>
+        </div>
+      </footer> 
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
